# EPS-Desafio-1

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  README.md  docker-compose.dev.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
reports/: reportOne.md
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/users/: views.py
