[project]
name = "eps_desafio_1"
version = "0.1.0"
description = ""
authors = [
    {name = "Wildemberg Sales",email = "junior_sales2010@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "bandit (>=1.9.4,<2.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "safety (>=3.7.0,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]
